--- a/ETL_Mini_Project_ABridgers_HRiebow.ipynb
+++ b/ETL_Mini_Project_ABridgers_HRiebow.ipynb
@@ -2308,7 +2308,7 @@
    ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "contact_info_df = pd.read_excel('Resources/contacts_starter.xlsx', header=2)\n",
     "contact_info_df.head()"
    ]
   },
@@ -3700,7 +3700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
