adding to check header issues

--- a/ETL_Mini_Project_ABridgers_HRiebow.ipynb
+++ b/ETL_Mini_Project_ABridgers_HRiebow.ipynb
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,7 +2181,8 @@
     "# for one of us, but not the other. Both versions are here to use as needed.\n",
     "\n",
     "contact_info_df = pd.read_excel('Resources/contacts_starter.xlsx', header=2, engine='openpyxl')\n",
-    "#contact_info_df = pd.read_excel('Resources/contacts_starter.xlsx', header=3)\n",
+    "#contact_info_df = pd.read_excel('Resources/contacts_starter.xlsx', header=1, engine='openpyxl')\n",
+    "#contact_info_df = pd.read_excel('Resources/contacts_starter.xlsx', header=3, engine='openpyxl')\n",
     "contact_info_df.head()"
    ]
   },
