--- a/ETL_Mini_Project_ABridgers_HRiebow.ipynb
+++ b/ETL_Mini_Project_ABridgers_HRiebow.ipynb
@@ -2177,10 +2177,12 @@
     }
    ],
    "source": [
-    "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data. Header param 2 worked \n",
-    "# for one of us, but not the other. Both versions are here to use as needed.\n",
+    "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
     "\n",
+    "#USE THIS CODE IF YOU ARE USING PANDAS 1.4.4\n",
     "contact_info_df = pd.read_excel('Resources/contacts_starter.xlsx', header=2, engine='openpyxl')\n",
+    "\n",
+    "#USE THIS CODE IF YOU ARE USING PANDAS 1.5.3\n",
     "#contact_info_df = pd.read_excel('Resources/contacts_starter.xlsx', header=3, engine='openpyxl')\n",
     "\n",
     "contact_info_df.head()"
